--- a/views/book-page.pug
+++ b/views/book-page.pug
@@ -15,22 +15,24 @@ block content
 					h2#series
 					#author
 					.review-info
+						span.avg-rating
 						.stars.star-container
 							<svg class='star' id='star-view-1' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
-								<path id='star-path-1' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
-								</svg>
-								<svg class='star' id='star-view-2' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
-								<path id='star-path-2' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
-								</svg>
-								<svg class='star' id='star-view-3' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
-								<path id='star-path-3' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
-								</svg>
-								<svg class='star' id='star-view-4' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
-								<path id='star-path-4' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
-								</svg>
-								<svg class='star' id='star-view-5' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
-								<path id='star-path-5' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
-								</svg>
+							<path id='star-path-1' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
+							</svg>
+							<svg class='star' id='star-view-2' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
+							<path id='star-path-2' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
+							</svg>
+							<svg class='star' id='star-view-3' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
+							<path id='star-path-3' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
+							</svg>
+							<svg class='star' id='star-view-4' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
+							<path id='star-path-4' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
+							</svg>
+							<svg class='star' id='star-view-5' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio>
+							<path id='star-path-5' d="M54,5 86,105 1,43H107L22,105" fill="#808080"/>
+							</svg>
+						span.review-count
 			div(class='select-shelves-placeholder') <span class='bookshelves-text'>Manage Bookshelves</span>
 				span(class='shelf-arrow-placeholder') ▾
 				form
