--- a/views/book-page.pug
+++ b/views/book-page.pug
@@ -50,6 +50,6 @@ block content
 						ul.shelves__dropdown--created-shelves
 			#summary
 			.review-container
-				table#reviews
-					tr#review-title
-						th Reviews
+				h3 Reviews
+				hr
+				#review-list
