Fixed routing issue

--- a/views/splash.pug
+++ b/views/splash.pug
@@ -34,7 +34,7 @@ html(lang="en")
                         .form__bottom-container
                             button(class='sign-up__input sign-up__inputs--submit' type="submit") Sign Up
                             .form__bottom--text-container
-                                <p class='sign-up__disclaimer'> By clicking "Sign Up" I agree to the Goodreads <a class='sign-up__disclaimer--link' href='http://localhost:8080/terms-of-service'>Terms of Service</a> confirm that I am at least 13 years old.
+                                <p class='sign-up__disclaimer'> By clicking "Sign Up" I agree to the Goodreads <a class='sign-up__disclaimer--link' href='/terms-of-service'>Terms of Service</a> confirm that I am at least 13 years old.
         .middle-content-container
             .middle-content__left
                 .middle-content__left--text-container
