--- a/views/splash.pug
+++ b/views/splash.pug
@@ -20,7 +20,7 @@ html(lang="en")
                             input(class='log-in__inputs log-in__inputs--email' type='email' name='email' id='login-email' placeholder='Email Address')
                             input(class='log-in__inputs log-in__inputs--password' type='password' name='password' id='login-password' placeholder='Password')
                             button(class='log-in__inputs log-in__inputs--submit' type="submit") Sign In
-                            button(class='log-in__inputs log-in__inputs--demo-user' type="button") Demo User
+                            button(class='log-in__inputs log-in__inputs--demo-user' type="button" id="demo") Demo User
                         .log-in__bottom-container
                             input(class='log-in__bottom log-in__bottom--remember-me' type="checkbox" name="remember-me" id='remember-me')
                             label(for='remember-me' class='log-in__bottom log-in__bottom--remember-me-text') Remember Me
