--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,7 +4,12 @@
 }
 
 .footer {
-  height: 240px;
+  display: flex;
+
+  padding: 24px 7.5vw 0px;
+
+  height: 112px;
+
   background-color: #f4f0ef;
   border-top: 2px solid #cecbcb;
 }
@@ -18,10 +23,7 @@
 
 .footer-list {
   list-style: none;
-}
-
-.footer__list {
-  margin-top: 40px;
+  margin-right: 10rem;
 }
 
 .footer-list-1__header,
@@ -31,10 +33,16 @@
   font-size: 16px;
 }
 
-.footer-container a {
+.footer a {
   display: block;
   color: #9c9c9a;
   font-size: 14px;
   margin-top: 8px;
   text-decoration: none;
+}
+
+@media screen and (max-width: 1440px) {
+  .footer {
+    padding: 24px 4% 0px;
+  }
 }
