--- a/views/include/footer.pug
+++ b/views/include/footer.pug
@@ -1,15 +1,17 @@
 footer.footer
-    .footer-container
-        .footer__list.footer__list--list-1
-            h5(class='footer-list-1__header') MORE INFO
-            ul(class='footer-list footer-list-1__list')
-                li: a(href='https://github.com/jerels/aAGoodreads', target="_blank") GitHub Repo
-        .footer__list.footer__list--list-2
-            h5(class='footer-list-2__header') LINKEDIN PROFILES
-            ul(class='footer-list footer-list-2__list')
-                li: a(href="https://www.linkedin.com/in/jerel-smith-a42aaa1b7/", target="_blank") Jerel Smith
-                li: a(href="https://www.linkedin.com/in/besonend/", target="_blank") Dylan Besonen
-                li: a(href="https://www.linkedin.com/in/panayiotis-dimopoulos/", target="_blank") Panayiotis Dimopoulos
-        .footer__list.footer__list--list-3
-            h5(class='footer-list-3__header') CONNECT
-            .footer__list-3--image-container
+    .footer__list.footer__list--list-1
+        h5(class='footer-list-1__header') MORE INFO
+        ul(class='footer-list footer-list-1__list')
+            li: a(href='https://github.com/jerels/aAGoodreads', target="_blank") GitHub Repo
+    .footer__list.footer__list--list-2
+        h5(class='footer-list-2__header') LINKEDIN PROFILES
+        ul(class='footer-list footer-list-2__list')
+            li: a(href="https://www.linkedin.com/in/jerel-smith-a42aaa1b7/", target="_blank") Jerel Smith
+            li: a(href="https://www.linkedin.com/in/besonend/", target="_blank") Dylan Besonen
+            li: a(href="https://www.linkedin.com/in/panayiotis-dimopoulos/", target="_blank") Panayiotis Dimopoulos
+    .footer__list.footer__list--list-3
+        h5(class='footer-list-3__header') GITHUB PROFILES
+        ul(class='footer-list footer-list-2__list')
+            li: a(href="https://github.com/jerels" target="_blank") Jerel Smith
+            li: a(href="https://github.com/PanosPHL" target="_blank") Dylan Besonen
+            li: a(href="https://github.com/besonend" target="_blank") Panayiotis Dimopoulos
