--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -6,18 +6,12 @@ header.header
         nav.header__right
             form.search-form
                 input(id="myInput" placeholder="Search by Title" name="title")
-            a(class='header__right-item header__right-item--home' href='/') Home
             a(class='header__right-item header__right-item--my-books' href='/my-books') My Books
             .dropContainer
                 a(class='header__right-item header__right-item--browse') Browse ▾
                 .dropContent.hidden
                     ul.drop-list
                         li: a(href='/browse/Titles') Browse by Title
-                        li: a(href='/browse/Authors') Browse by Author
-                        li: a(href='/browse/Genres') Browse by Genre
-            .dropContainer
-                a(class='header__right-item header__right-item--profile'): img(class='header__right-item--profile-pic' src='https://s.gr-assets.com/assets/nophoto/user/u_60x60-267f0ca0ea48fd3acfd44b95afa64f01.png')
-                .dropProfileContent.hidden
-                    ul.drop-list
-                        li: a(href='/profile') Profile
-                        li: a#logout(href='/') Logout
+            img(class='header__right-item--profile-pic' src='https://s.gr-assets.com/assets/nophoto/user/u_60x60-267f0ca0ea48fd3acfd44b95afa64f01.png')
+            button#logout.logout-button
+                img(class="logout-button-image" src="/public/images/exit_image.png")
