--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -11,7 +11,7 @@ header.header
                 a(class='header__right-item header__right-item--browse') Browse ▾
                 .dropContent.hidden
                     ul.drop-list
-                        li: a(href='/browse/Titles') Browse by Title
+                        li: a(href='/browse/title') Browse by Title
             img(class='header__right-item--profile-pic' src='https://s.gr-assets.com/assets/nophoto/user/u_60x60-267f0ca0ea48fd3acfd44b95afa64f01.png')
             button#logout.logout-button
                 img(class="logout-button-image" src="/public/images/exit_image.png")
