--- a/views/book-page.pug
+++ b/views/book-page.pug
@@ -14,7 +14,7 @@ block content
 					div.body-shelves-container
 						span(class='select-shelves-placeholder') <span class='bookshelves-text'>Manage Bookshelves</span>
 							span(class='shelf-arrow-placeholder') ▾
-						form
+						form.shelf-form
 							.shelve-list-container.hidden
 								ul.shelves__dropdown--default-checks
 									li.currently-reading
