--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -15,6 +15,7 @@ h1 {
 
 .header {
   display: flex;
+  min-width: 1228px;
   border-bottom: 2px #7c7c7c solid;
   background-color: #ffffff;
   padding: 0 calc(40% - 500px) 0 4%;
@@ -117,6 +118,7 @@ h1 {
 .sign-up-container {
   background-color: #789dc4;
   height: 310px;
+  min-width: 1300px;
 }
 
 .sign-up__form-container {
@@ -372,4 +374,10 @@ h1 {
 #login {
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 1316px) {
+  .header {
+    padding: 0 20px 0 52px;
+  }
 }
