Restyled browse dropdown

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -98,18 +98,15 @@ header {
 .dropContent {
   position: absolute;
   background-color: white;
-  top: 6.6vh;
-  left: 0.7vw;
+  top: 64px;
   border-radius: 4px;
+  width: 100%;
+  text-align: center;
 }
 
 .dropContent li {
-  padding-left: 0.4vw;
-  padding-right: 1vw;
-  padding-bottom: 0.6vh;
-  padding-top: 0.8vh;
-  font-size: 1.6vh;
-  height: 2.4vh;
+  font-size: 14px;
+  padding: 12px 8px;
 }
 
 .dropContent li:hover {
