--- a/public/css/review.css
+++ b/public/css/review.css
@@ -1,212 +1,205 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body:not(.header__left) {
-    font-family: Helvetica;
-}
-
-.body-content-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(12, 6vh);
+  font-family: Helvetica;
 }
 
 .body-content-container {
-    display: grid;
-    grid-template-rows: repeat(12, 6vh);
-    grid-column: 2 / 4;
-    grid-row: 1 / 13;
+  display: flex;
+  flex-direction: column;
+  padding: 1% 18% 2%;
+  margin-bottom: 2%;
+  min-width: 676px;
+  min-height: 672px;
 }
 
 .body-header-container {
-    margin-top: 2vh;
-    grid-row: 1 / 2;
+  margin-top: 20px;
+  min-width: 738px;
 }
 
 .body-header-container__item--text {
-    font-size: 2.7vh;
-    font-weight: 550;
+  font-size: 26px;
+  font-weight: 550;
 }
 
 .book-link-header {
-    text-decoration: none;
-    color: #00635D;
+  text-decoration: none;
+  color: #00635d;
 }
 
 .body-book-container {
-    display: flex;
-    margin-top: 2vh;
-    grid-row: 2/5;
+  display: flex;
+  margin-top: 2vh;
 }
 
 .book-container__item--cover {
-    height: 14vh;
+  height: 132px;
 }
 
 .book-container__text-container {
-    margin-left: 1vw;
-    margin-top: 2vh;
+  margin-left: 1vw;
+  margin-top: 2vh;
 }
 
 .book-container__text-item--title {
-    font-size: 2.2vh;
-    color: black;
+  font-size: 21px;
+  color: black;
 }
 
 .book-title__link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .book-container__text-item--authors {
-    color: black;
-    font-weight: 540;
-    font-size: 1.8vh;
-    margin-top: 1.2vh;
-}
-
-form {
-    grid-row: 5 / 12;
+  color: black;
+  font-weight: 540;
+  font-size: 17px;
+  margin-top: 1.2vh;
 }
 
 .body-rating-shelf-container {
-    grid-row: 1 / 8;
-    display: grid;
-    grid-template-rows: repeat(8, 6vh);
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 12px;
 }
 
 .body-rating-container {
-    display: flex;
-    grid-row: 1 / 2;
+  display: flex;
 }
 
 .rating-container__text--my-rating {
-    display: inline-block;
-    padding-top: 1vh;
+  display: inline-block;
+  padding-top: 1vh;
 }
 
 .stars {
-    display: inline-flex;
-    margin-left: 1vw;
-    height: 6vh;
-    padding-top: 1vh;
-    margin-top: -1vh;
+  display: inline-flex;
+  margin-left: 1vw;
+  height: 6vh;
+  padding-top: 1vh;
+  margin-top: -1vh;
 }
 
 svg {
-    height: 3.2vh;
-    padding-right: 0.4vw;
+  height: 30px;
+  padding-right: 0.4vw;
 }
 
 .clear-rating {
-    display: block;
-    margin-left: 1vw;
-    margin-top: 1vh;
-    margin-bottom: auto;
+  display: block;
+  margin-left: 1vw;
+  margin-top: 1vh;
+  margin-bottom: auto;
 }
 
 .clear-rating:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .body-shelves-container {
-    position: relative;
-    grid-row: 2 / 3;
+  position: relative;
 }
 
 .select-shelves-placeholder {
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    width: 12vw;
-    height: 3vh;
-    font-size: 1.8vh;
-    background-color: #dfdfdf;
-    margin-top: 0.4vh;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 228px;
+  height: 28px;
+  font-size: 17px;
+  background-color: #dfdfdf;
+  margin-top: 12px;
 }
 
 .bookshelves-text {
-    display: inline-block;
-    margin-left: 1vw;
-    margin-top: 0.4vh;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+  display: inline-block;
+  margin-left: 1vw;
+  margin-top: 0.4vh;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .shelve-list-container {
-    position: absolute;
-    left: 0;
-    top: 3.5vh;
-    background-color: rgb(233, 233, 233);
-    z-index: 0;
-    border-radius: 4px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-    width: 12vw;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+  position: absolute;
+  left: -2px;
+  top: 30px;
+  padding: 14px 0 12px 18px;
+  background-color: rgb(233, 233, 233);
+  z-index: 0;
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  width: 230px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .select-shelves-placeholder:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .shelf-arrow-placeholder {
-    display: inline-block;
-    margin-left: 1vw;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+  display: inline-block;
+  margin-left: 1vw;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 li:not(ul.footer-list > li) {
-    padding-left: 1vw;
-    padding-top: 0.5vh;
-    padding-bottom: 0.5vh;
-    width: auto;
+  padding-left: 1vw;
+  padding-top: 0.5vh;
+  padding-bottom: 0.5vh;
+  width: auto;
 }
 
 li:hover {
-    background-color: rgb(221, 221, 221);
+  background-color: rgb(221, 221, 221);
 }
 
 .review-content-container {
-    grid-row: 3 / 8;
+  min-height: 282px;
+  margin-top: 24px;
 }
 
 .review-container__item--content {
-    width: 34vw;
-    height: 24vh;
-    font-family: Helvetica;
-    font-size: 1.6vh;
-    margin-top: 1vh;
+  width: 650px;
+  height: 224px;
+  resize: none;
+  font-family: Helvetica;
+  font-size: 15px;
+  margin-top: 1vh;
 }
 
 .submit-button {
-    width: 4vw;
-    height: 3vh;
-    font-family: Helvetica;
-    background-color: #DFDFDF;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    font-size: 1.8vh;
+  width: 78px;
+  height: 26px;
+  font-family: Helvetica;
+  background-color: #dfdfdf;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  font-size: 17px;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .star-on {
-    fill: #f3b421;
+  fill: #f3b421;
 }
 
 .star-on-permanent {
-    fill: #f3b421;
+  fill: #f3b421;
 }
