--- a/views/edit-review.pug
+++ b/views/edit-review.pug
@@ -15,7 +15,7 @@ block content
             .book-container__text-container
                 h4(class='book-container__text-item book-container__text-item--title'): a(class='book-title__link')
                 h5(class='book-container__text-item book-container__text-item--authors')
-        form
+        form.review-form
             .body-rating-shelf-container
                 .body-rating-container
                     span(class='rating-container__text rating-container__text--my-rating') My rating:
